<resources>
    <string name="app_name">Diabetes Notifications</string>
    <string name="tab_rules">Rules</string>
    <string name="tab_settings">Settings</string>
    <string name="add_rule">Add Rule</string>
    <string name="notification_categories">Notification Categories</string>
    <string name="ui_settings">User interface</string>">
    <string name="category_fact">Facts</string>
    <string name="category_health">Health Tips</string>
    <string name="category_scary">Scary Facts</string>
    <string name="category_motivation">Motivation</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notification_sound">Play Sound</string>
    <string name="notification_vibrate">Vibrate</string>
    <string name="notification_banner">Show Banner</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="premium_description">Get access to all notification messages and unlimited rules!</string>
    <string name="premium_price">$1.99</string>
    <string name="exact_time">Exact Time</string>
    <string name="time_window">Time Window</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="add_notification_rule">Add Notification Rule</string>
    <string name="premium_features">Premium Features</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="use_note_as_notification">Use note as notification text</string>
    <string name="premium_note_as_notification">Upgrade to Premium to use notes as notification text</string>
    <string name="premium_required_note">This feature requires Premium</string>
    <string name="premium_required_colors">Upgrade to Premium to customize rule colors</string>
</resources>